Grid-based Canvas
Semi-works

--- a/prog-hws/1/index.html
+++ b/prog-hws/1/index.html
@@ -3,6 +3,10 @@
   <title>Programming Assignment 1</title>
   <body>
     <canvas id="CanvasID" width="500" height="500"></canvas>
-    <script type="text/javascript" src="src/Main.js"></script>
+
+    <script type="text/javascript" src="js/Canvas.js"></script>
+    <script type="text/javascript" src="js/Point.js"></script>
+    <script type="text/javascript" src="js/LineSegment.js"></script>
+    <script type="text/javascript" src="js/Main.js"></script>
   </body>
 </html>
