Fixed Rec, Simplified HandleLine

--- a/prog-hws/1/index.html
+++ b/prog-hws/1/index.html
@@ -8,9 +8,9 @@
     <script type="text/javascript" src="js/Point.js"></script>
     <script type="text/javascript" src="js/LineSegment.js"></script>
     <script type="text/javascript" src="js/Rectangle.js"></script>
-    <!-- <script type="text/javascript" src="js/HandleRectangles.js"></script> -->
-    <script type="text/javascript" src="js/Main.js"></script>
     <script type="text/javascript" src="js/HandleLines.js"></script>
+    <script type="text/javascript" src="js/HandleRectangles.js"></script>
+    <script type="text/javascript" src="js/Main.js"></script>
 
   </body>
 </html>
